--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,c++,visualstudiocode
+to_be_ignore.txt
